--- a/gadgets/trunk/eXoGadgets.Ext/pom.xml
+++ b/gadgets/trunk/eXoGadgets.Ext/pom.xml
@@ -20,13 +20,13 @@
 -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion> 
   <parent>
-    <groupId>org.exoplatform.portal</groupId>
-    <artifactId>exo.portal.gadgets</artifactId>
-    <version>3.2.0-Beta01-SNAPSHOT</version>
+     <groupId>exo.portal.gadgets.extension</groupId>
+     <artifactId>gadgets.extension</artifactId>
+     <version>3.2.0-Beta01-SNAPSHOT</version>
   </parent>
 
-  <modelVersion>4.0.0</modelVersion>
   <artifactId>exo.portal.eXoGadgets.Ext</artifactId>
   <packaging>war</packaging>
   <name>GateIn Portal eXo Gadgets Application</name>
