--- a/gadgets/trunk/rest/pom.xml
+++ b/gadgets/trunk/rest/pom.xml
@@ -23,11 +23,11 @@
 
    <modelVersion>4.0.0</modelVersion>
 
-   <parent>
-      <groupId>org.exoplatform.portal</groupId>
-      <artifactId>exo.portal.component</artifactId>
-      <version>3.2.0-Beta01-SNAPSHOT</version>
-   </parent>
+  <parent>
+     <groupId>exo.portal.gadgets.extension</groupId>
+     <artifactId>gadgets.extension</artifactId>
+     <version>3.2.0-Beta01-SNAPSHOT</version>
+  </parent>
 
    <artifactId>exo.portal.component.webservice.rest</artifactId>
    <packaging>jar</packaging>
@@ -38,7 +38,7 @@
      <dependency>
      	<groupId>org.exoplatform.portal</groupId>
      	<artifactId>exo.portal.component.portal</artifactId>
-     	<version>3.2.0-Beta01-SNAPSHOT</version>
+     	<version>3.1.0-GA</version>
      </dependency>          
      <dependency>
         <groupId>org.exoplatform.ws</groupId>
