--- a/photo-sharing/trunk/pom.xml
+++ b/photo-sharing/trunk/pom.xml
@@ -3,10 +3,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.exoplatform.portal</groupId>
-  <artifactId>exo.portal.utilities.photoSharing</artifactId>
+  <artifactId>exo.portal.utilities.photo-sharing</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>exo.portal.utilities.photoSharing Maven Webapp</name>
+  <name>Photo sharing utility</name>
   <url>http://maven.apache.org</url>
   <dependencyManagement>
     <dependencies>
