--- a/photo-sharing/trunk/webui/pom.xml
+++ b/photo-sharing/trunk/webui/pom.xml
@@ -3,18 +3,18 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>exo.portal.utilities.photoSharing</artifactId>
+    <artifactId>exo.portal.utilities.photo-sharing</artifactId>
     <groupId>org.exoplatform.portal</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   <groupId>org.exoplatform.portal</groupId>
-  <artifactId>exo.portal.utilities.photoSharing.webui</artifactId>
+  <artifactId>exo.portal.utilities.photo-sharing.webui</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>Portal photo sharing</name>
   <url>http://maven.apache.org</url>
   <build>
-    <finalName>exo.portal.utilities.photoSharing.webui</finalName>
+    <finalName>photosharing</finalName>
   </build>
   <dependencies>
     <dependency>
