edit pom.xml file for gatein-setting portlet
git-svn-id: https://exo-utilities.googlecode.com/svn@36 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/gatein-setting-portlet/pom.xml
+++ b/gatein-setting-portlet/pom.xml
@@ -41,9 +41,9 @@
 
   <dependencies>
       <dependency>
-          <groupId>portlet-api</groupId>
+          <groupId>javax.portlet</groupId>
           <artifactId>portlet-api</artifactId>
-          <version>1.0</version>
+          <version>2.0</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
