Create a sample rest service and configure it to be protected by OAuth
git-svn-id: https://exo-utilities.googlecode.com/svn@47 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -9,6 +9,7 @@
    <modules>
       <module>oauth-provider</module>
       <module>oauth-gadget</module>
+      <module>sample-rest-service</module>
    </modules>
    <build>
       <plugins>
