--- a/oauth/oauth-provider/src/main/webapp/WEB-INF/web.xml
+++ b/oauth/oauth-provider/src/main/webapp/WEB-INF/web.xml
@@ -2,15 +2,45 @@
 <web-app version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+   <display-name>portal</display-name>
+   <filter>
+      <filter-name>PortalContainerInitializedFilter</filter-name>
+      <filter-class>org.exoplatform.ws.frameworks.servlet.PortalContainerInitializedFilter</filter-class>
+   </filter>
    <filter>
       <filter-name>OAuthConsumerFilter</filter-name>
       <filter-class>net.oauth.example.provider.servlets.OAuthConsumerFilter</filter-class>
    </filter>
+   <filter>
+      <filter-name>RestEncodingFilter</filter-name>
+      <filter-class>org.exoplatform.services.rest.servlet.RestEncodingFilter</filter-class>
+      <init-param>
+         <param-name>REQUEST_ENCODING</param-name>
+         <param-value>UTF-8</param-value>
+      </init-param>
+   </filter>
+
+   <filter-mapping>
+      <filter-name>PortalContainerInitializedFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+   </filter-mapping>
    <filter-mapping>
       <filter-name>OAuthConsumerFilter</filter-name>
       <url-pattern>/echo</url-pattern>
    </filter-mapping>
-   
+   <filter-mapping>
+      <filter-name>OAuthConsumerFilter</filter-name>
+      <url-pattern>/rest/*</url-pattern>
+   </filter-mapping>
+   <filter-mapping>
+      <filter-name>RestEncodingFilter</filter-name>
+      <url-pattern>/rest/*</url-pattern>
+   </filter-mapping>
+
+   <!-- ========================================================= -->
+   <!-- SERVLET -->
+   <!-- ========================================================= -->
+
    <servlet>
       <servlet-name>RequestTokenServlet</servlet-name>
       <servlet-class>net.oauth.example.provider.servlets.RequestTokenServlet</servlet-class>
@@ -27,6 +57,12 @@
       <servlet-name>OAuthProtectedServlet</servlet-name>
       <servlet-class>net.oauth.example.provider.servlets.OAuthProtectedServlet</servlet-class>
    </servlet>
+   <servlet>
+      <servlet-name>RestServer</servlet-name>
+      <servlet-class>org.exoplatform.services.rest.servlet.RestServlet</servlet-class>
+      <load-on-startup>4</load-on-startup>
+   </servlet>
+
    <servlet-mapping>
       <servlet-name>RequestTokenServlet</servlet-name>
       <url-pattern>/request_token</url-pattern>
@@ -42,6 +78,10 @@
    <servlet-mapping>
       <servlet-name>OAuthProtectedServlet</servlet-name>
       <url-pattern>/echo</url-pattern>
+   </servlet-mapping>
+   <servlet-mapping>
+      <servlet-name>RestServer</servlet-name>
+      <url-pattern>/rest/*</url-pattern>
    </servlet-mapping>
 
    <session-config>
