Refactor folder structure
git-svn-id: https://exo-utilities.googlecode.com/svn@48 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -8,7 +8,7 @@
    <name>OAuth::Examples::Parent POM</name>
    <modules>
       <module>oauth-provider</module>
-      <module>oauth-gadget</module>
+      <module>sample-oauth-gadget</module>
       <module>sample-rest-service</module>
    </modules>
    <build>
