--- a/oauth/sample-oauth-gadget/pom.xml
+++ b/oauth/sample-oauth-gadget/pom.xml
@@ -9,12 +9,8 @@
       <version>1.0</version>
    </parent>
    <groupId>net.oauth.example</groupId>
-   <artifactId>oauth-example-gadget</artifactId>
+   <artifactId>sample-oauth-gadget</artifactId>
    <version>1.0</version>
-   <name>oauth-example-gadget</name>
    <url>http://maven.apache.org</url>
    <packaging>war</packaging>
-   <build>
-      <finalName>oauth-gadget</finalName>
-   </build>
 </project>
