Rename the oauth provider project
git-svn-id: https://exo-utilities.googlecode.com/svn@49 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/oauth-provider/pom.xml
+++ b/oauth/oauth-provider/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>oauth-examples-parent</artifactId>
     <version>1.0</version>
   </parent>
-  <artifactId>oauth-example-provider</artifactId>
+  <artifactId>oauth-provider</artifactId>
   <packaging>war</packaging>
   <name>OAuth::Examples::Provider webapp</name>
   <dependencies>
