Re-organize folder structure
git-svn-id: https://exo-utilities.googlecode.com/svn@50 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/example-rest-service/pom.xml
+++ b/oauth/example-rest-service/pom.xml
@@ -7,10 +7,9 @@
    </parent>
 
    <modelVersion>4.0.0</modelVersion>
-   <groupId>trongtt.examples</groupId>
-   <artifactId>sample-rest-service</artifactId>
+   <groupId>org.exoplatform.oauth</groupId>
+   <artifactId>example-rest-service</artifactId>
    <packaging>jar</packaging>
-   <version>1.0-SNAPSHOT</version>
    <repositories>
       <repository>
          <id>jboss-public-repository-group</id>
