--- a/oauth/example-oauth-gadget/pom.xml
+++ b/oauth/example-oauth-gadget/pom.xml
@@ -4,12 +4,11 @@
    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>
    <parent>
-      <artifactId>oauth-examples-parent</artifactId>
-      <groupId>net.oauth.example</groupId>
+      <groupId>org.exoplatform.oauth</groupId>
+      <artifactId>parent-pom</artifactId>
       <version>1.0</version>
    </parent>
-   <groupId>net.oauth.example</groupId>
-   <artifactId>sample-oauth-gadget</artifactId>
+   <artifactId>example-oauth-gadget</artifactId>
    <version>1.0</version>
    <url>http://maven.apache.org</url>
    <packaging>war</packaging>
