--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
-   <groupId>net.oauth.example</groupId>
-   <artifactId>oauth-examples-parent</artifactId>
+   <groupId>org.exoplatform.oauth</groupId>
+   <artifactId>parent-pom</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>
    <name>OAuth::Examples::Parent POM</name>
    <modules>
       <module>oauth-provider</module>
-      <module>sample-oauth-gadget</module>
-      <module>sample-rest-service</module>
+      <module>example-oauth-gadget</module>
+      <module>example-rest-service</module>
    </modules>
    <build>
       <plugins>
