--- a/portlet-examples/286-compliant-portlet-samples/src/main/webapp/WEB-INF/web.xml
+++ b/portlet-examples/286-compliant-portlet-samples/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,11 @@
    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
    <display-name>Jsr286EventListenerPortlet</display-name>
 
-   <!-- This for portlet registration in GateIn -->
+   <!-- This for portlet registration in eXo Portal -->
    <listener>
       <listener-class>org.exoplatform.services.portletcontainer.impl.servlet.PortletApplicationListener</listener-class>
    </listener>
 
-   <!-- This for portlet registration in GateIn -->
    <servlet>
       <servlet-name>PortletWrapper</servlet-name>
       <servlet-class>org.exoplatform.services.portletcontainer.impl.servlet.ServletWrapper</servlet-class>
@@ -18,4 +17,6 @@
       <servlet-name>PortletWrapper</servlet-name>
       <url-pattern>/PortletWrapper</url-pattern>
    </servlet-mapping>
+   <!--  -->
+
 </web-app>
