Re-organize code
git-svn-id: https://exo-utilities.googlecode.com/svn@57 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/example-oauth-gadget/pom.xml
+++ b/oauth/example-oauth-gadget/pom.xml
@@ -12,4 +12,8 @@
    <version>1.0</version>
    <url>http://maven.apache.org</url>
    <packaging>war</packaging>
+   
+   <build>
+      <finalName>example-oauth-gadget</finalName>
+   </build>
 </project>
