--- a/oauth/exo-oauth-provider/pom.xml
+++ b/oauth/exo-oauth-provider/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>parent-pom</artifactId>
     <version>1.0</version>
   </parent>
-  <artifactId>oauth-provider</artifactId>
+  <artifactId>exo-oauth-provider</artifactId>
   <packaging>war</packaging>
   <name>OAuth::Examples::Provider webapp</name>
   <dependencies>
@@ -20,6 +20,11 @@
       <groupId>net.oauth</groupId>
       <artifactId>oauth-core</artifactId>
       <version>20090531</version>
+    </dependency>
+    <dependency>
+      <groupId>org.exoplatform.kernel</groupId>
+      <artifactId>exo.kernel.container</artifactId>
+      <version>2.2.2-GA</version>
     </dependency>
   </dependencies>
   <build>
