Change project name
git-svn-id: https://exo-utilities.googlecode.com/svn@58 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/exo-oauth-provider/pom.xml
+++ b/oauth/exo-oauth-provider/pom.xml
@@ -28,7 +28,7 @@
     </dependency>
   </dependencies>
   <build>
-    <finalName>oauth-provider</finalName>
+    <finalName>exo-oauth-provider</finalName>
     <resources>
       <resource>
         <directory>src/main/java</directory>
