--- a/oauth/exo-oauth-provider/pom.xml
+++ b/oauth/exo-oauth-provider/pom.xml
@@ -1,41 +1,52 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.exoplatform.oauth</groupId>
-    <artifactId>parent-pom</artifactId>
-    <version>1.0</version>
-  </parent>
-  <artifactId>exo-oauth-provider</artifactId>
-  <packaging>war</packaging>
-  <name>OAuth::Examples::Provider webapp</name>
-  <dependencies>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.5</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>net.oauth</groupId>
-      <artifactId>oauth-core</artifactId>
-      <version>20090531</version>
-    </dependency>
-    <dependency>
-      <groupId>org.exoplatform.kernel</groupId>
-      <artifactId>exo.kernel.container</artifactId>
-      <version>2.2.2-GA</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>exo-oauth-provider</finalName>
-    <resources>
-      <resource>
-        <directory>src/main/java</directory>
-        <includes>
-          <include>**/*.properties</include>
-        </includes>
-      </resource>
-    </resources>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+   <modelVersion>4.0.0</modelVersion>
+   <parent>
+      <groupId>org.exoplatform.oauth</groupId>
+      <artifactId>parent-pom</artifactId>
+      <version>1.0</version>
+   </parent>
+   <artifactId>exo-oauth-provider</artifactId>
+   <packaging>war</packaging>
+   <name>OAuth::Examples::Provider webapp</name>
+   <dependencies>
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>servlet-api</artifactId>
+         <version>2.5</version>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>net.oauth.core</groupId>
+         <artifactId>oauth</artifactId>
+         <version>20090531</version>
+      </dependency>
+      <dependency>
+         <groupId>net.oauth.core</groupId>
+         <artifactId>oauth-provider</artifactId>
+         <version>20090531</version>
+      </dependency>
+      <dependency>
+         <groupId>org.exoplatform.kernel</groupId>
+         <artifactId>exo.kernel.container</artifactId>
+         <version>2.2.2-GA</version>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>commons-codec</groupId>
+         <artifactId>commons-codec</artifactId>
+         <version>1.3</version>
+         <scope>provided</scope>
+      </dependency>
+   </dependencies>
+   <build>
+      <finalName>exo-oauth-provider</finalName>
+      <resources>
+         <resource>
+            <directory>src/main/java</directory>
+            <includes>
+               <include>**/*.properties</include>
+            </includes>
+         </resource>
+      </resources>
+   </build>
 </project>
