--- a/oauth/exo-oauth-provider/pom.xml
+++ b/oauth/exo-oauth-provider/pom.xml
@@ -16,25 +16,15 @@
          <scope>provided</scope>
       </dependency>
       <dependency>
-         <groupId>net.oauth.core</groupId>
-         <artifactId>oauth</artifactId>
-         <version>20090531</version>
-      </dependency>
-      <dependency>
-         <groupId>net.oauth.core</groupId>
-         <artifactId>oauth-provider</artifactId>
-         <version>20090531</version>
+         <groupId>net.oauth</groupId>
+         <artifactId>core</artifactId>
+         <version>20080621</version>
+         <scope>provided</scope>
       </dependency>
       <dependency>
          <groupId>org.exoplatform.kernel</groupId>
          <artifactId>exo.kernel.container</artifactId>
          <version>2.2.2-GA</version>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>commons-codec</groupId>
-         <artifactId>commons-codec</artifactId>
-         <version>1.3</version>
          <scope>provided</scope>
       </dependency>
    </dependencies>
