--- a/oauth/exo-oauth-provider/pom.xml
+++ b/oauth/exo-oauth-provider/pom.xml
@@ -27,6 +27,12 @@
          <version>2.2.2-GA</version>
          <scope>provided</scope>
       </dependency>
+      <dependency>
+	     <groupId>org.exoplatform.core</groupId>
+	     <artifactId>exo.core.component.security.core</artifactId>
+	     <version>2.2.2</version>
+	     <scope>provided</scope>
+      </dependency>
    </dependencies>
    <build>
       <finalName>exo-oauth-provider</finalName>
