Add oauth-comsumer-management to oauth modules
git-svn-id: https://exo-utilities.googlecode.com/svn@66 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -10,6 +10,7 @@
       <module>exo-oauth-provider</module>
       <module>example-oauth-gadget</module>
       <module>example-rest-service</module>
+      <module>oauth-consumer-management</module>
    </modules>
    <build>
       <plugins>
