--- a/oauth/example-rest-service/pom.xml
+++ b/oauth/example-rest-service/pom.xml
@@ -110,7 +110,7 @@
       <dependency>
          <groupId>org.exoplatform.ws</groupId>
          <artifactId>exo.ws.rest.core</artifactId>
-         <version>${org.exoplatform.ws.version}</version>
+         <version>2.1.2-GA</version>
       </dependency>
    </dependencies>
 </project>
