--- a/oauth/exo-oauth-provider-service/pom.xml
+++ b/oauth/exo-oauth-provider-service/pom.xml
@@ -5,9 +5,8 @@
       <artifactId>parent-pom</artifactId>
       <version>1.0</version>
    </parent>
-   <artifactId>exo-oauth-provider</artifactId>
-   <packaging>war</packaging>
-   <name>OAuth::Examples::Provider webapp</name>
+   <artifactId>exo-oauth-provider-service</artifactId>
+   <packaging>jar</packaging>
    <dependencies>
       <dependency>
          <groupId>javax.servlet</groupId>
@@ -24,6 +23,12 @@
       <dependency>
          <groupId>org.exoplatform.kernel</groupId>
          <artifactId>exo.kernel.container</artifactId>
+         <version>2.2.2-GA</version>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.exoplatform.kernel</groupId>
+         <artifactId>exo.kernel.component.cache</artifactId>
          <version>2.2.2-GA</version>
          <scope>provided</scope>
       </dependency>
