Re-organize code
git-svn-id: https://exo-utilities.googlecode.com/svn@70 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/exo-oauth-provider-webapp/pom.xml
+++ b/oauth/exo-oauth-provider-webapp/pom.xml
@@ -9,6 +9,6 @@
    <packaging>war</packaging>
    <name>OAuth::Examples::Provider webapp</name>
    <build>
-      <finalName>exo-oauth-provider-webapp</finalName>
+      <finalName>exo-oauth-provider</finalName>
    </build>
 </project>
