--- a/oauth/exo-oauth-provider-service/pom.xml
+++ b/oauth/exo-oauth-provider-service/pom.xml
@@ -1,11 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
-      <groupId>org.exoplatform.oauth</groupId>
-      <artifactId>parent-pom</artifactId>
-      <version>1.0</version>
+      <groupId>org.exoplatform.portal</groupId>
+      <artifactId>exo.portal.parent</artifactId>
+      <version>3.1.0-GA</version>
    </parent>
+   <groupId>org.exoplatform.oauth</groupId>
    <artifactId>exo-oauth-provider-service</artifactId>
+   <version>1.0</version>
    <packaging>jar</packaging>
    <dependencies>
       <dependency>
@@ -39,14 +41,4 @@
 	     <scope>provided</scope>
       </dependency>
    </dependencies>
-   <build>
-      <resources>
-         <resource>
-            <directory>src/main/java</directory>
-            <includes>
-               <include>**/*.properties</include>
-            </includes>
-         </resource>
-      </resources>
-   </build>
 </project>
