--- a/oauth/exo-oauth-provider-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/oauth/exo-oauth-provider-webapp/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,12 @@
       <filter-class>org.exoplatform.ws.frameworks.servlet.PortalContainerInitializedFilter</filter-class>
    </filter>
    <filter>
-      <filter-name>OAuthConsumerFilter</filter-name>
-      <filter-class>net.oauth.example.provider.servlets.OAuthConsumerFilter</filter-class>
+      <filter-name>ExoThreeLeggedOAuthFilter</filter-name>
+      <filter-class>net.oauth.example.provider.servlets.ExoThreeLeggedOAuthFilter</filter-class>
+   </filter>
+   <filter>
+      <filter-name>ExoTwoLeggedOAuthFilter</filter-name>
+      <filter-class>net.oauth.example.provider.servlets.ExoTwoLeggedOAuthFilter</filter-class>
    </filter>
    <filter>
       <filter-name>RestEncodingFilter</filter-name>
@@ -25,12 +29,12 @@
       <url-pattern>/*</url-pattern>
    </filter-mapping>
    <filter-mapping>
-      <filter-name>OAuthConsumerFilter</filter-name>
-      <url-pattern>/echo</url-pattern>
+      <filter-name>ExoTwoLeggedOAuthFilter</filter-name>
+      <url-pattern>/rest/calculator/*</url-pattern>
    </filter-mapping>
    <filter-mapping>
-      <filter-name>OAuthConsumerFilter</filter-name>
-      <url-pattern>/rest/*</url-pattern>
+      <filter-name>ExoThreeLeggedOAuthFilter</filter-name>
+      <url-pattern>/rest/SimpleRest/*</url-pattern>
    </filter-mapping>
    <filter-mapping>
       <filter-name>RestEncodingFilter</filter-name>
