Fix error commit at r73
git-svn-id: https://exo-utilities.googlecode.com/svn@74 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/exo-oauth-provider-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/oauth/exo-oauth-provider-webapp/src/main/webapp/WEB-INF/web.xml
@@ -30,11 +30,15 @@
    </filter-mapping>
    <filter-mapping>
       <filter-name>ExoTwoLeggedOAuthFilter</filter-name>
-      <url-pattern>/rest/calculator/*</url-pattern>
+      <url-pattern>/rest/SocialRest/*</url-pattern>
    </filter-mapping>
    <filter-mapping>
       <filter-name>ExoThreeLeggedOAuthFilter</filter-name>
       <url-pattern>/rest/SimpleRest/*</url-pattern>
+   </filter-mapping>
+   <filter-mapping>
+      <filter-name>ExoThreeLeggedOAuthFilter</filter-name>
+      <url-pattern>/echo</url-pattern>
    </filter-mapping>
    <filter-mapping>
       <filter-name>RestEncodingFilter</filter-name>
