add consumer service and its example to pom parent
git-svn-id: https://exo-utilities.googlecode.com/svn@76 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/pom.xml
+++ b/oauth/pom.xml
@@ -9,6 +9,8 @@
    <modules>
       <module>exo-oauth-provider-service</module>
       <module>exo-oauth-provider-webapp</module>
+      <module>exo-oauth-consumer-service</module>
+      <module>example-oauth-consumer</module>
       <module>example-oauth-gadget</module>
       <module>example-rest-service</module>
    </modules>
