Rename name of classes from exo-oauth-provider-service and exo-oauth-consumer-service to make sense and name synchronization between these projects
git-svn-id: https://exo-utilities.googlecode.com/svn@81 3e5d066b-cb39-62c2-c181-8bc5aa994189

--- a/oauth/example-oauth-consumer/src/main/webapp/WEB-INF/web.xml
+++ b/oauth/example-oauth-consumer/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,8 @@
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
     <servlet>
-        <servlet-name>OAuth3LeggedCallback</servlet-name>
-        <servlet-class>net.oauth.example.consumer.OAuth3LeggedCallback</servlet-class>
+        <servlet-name>ExoOAuth3LeggedCallback</servlet-name>
+        <servlet-class>net.oauth.example.consumer.ExoOAuth3LeggedCallback</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>GateIn2LeggedConsumerServlet</servlet-name>
@@ -32,7 +32,7 @@
         <servlet-class>net.oauth.example.consumer.servlet.Yahoo3LeggedConsumerServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>OAuth3LeggedCallback</servlet-name>
+        <servlet-name>ExoOAuth3LeggedCallback</servlet-name>
         <url-pattern>/OAuth/OAuth3LeggedCallback</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
